@@ -368,40 +368,38 @@ condition."
            (mapcan 'who-specializes (ccl::%class-direct-subclasses class)))
    :test 'equal))
 
-(defimplementation swank-compile-string (string &key buffer position directory
+(defimplementation swank-compile-string (string &key buffer position filename
                                          policy)
   (declare (ignore policy))
   (with-compilation-hooks ()
     (let ((*buffer-name* buffer)
           (*buffer-offset* position)
-          (filename (temp-file-name)))
+          (temp-file-name (temp-file-name)))
       (unwind-protect
-           (with-open-file (s filename :direction :output :if-exists :error)
-             (write-string string s))
-        (let ((binary-filename (compile-temp-file
-                                filename directory buffer position)))
-          (delete-file binary-filename)))
-      (delete-file filename))))
+           (progn
+             (with-open-file (s temp-file-name :direction :output 
+                                :if-exists :error)
+               (write-string string s))
+             (let ((binary-filename (compile-temp-file
+                                     temp-file-name filename buffer position)))
+               (delete-file binary-filename)))
+        (delete-file temp-file-name)))))
 
 (defvar *temp-file-map* (make-hash-table :test #'equal)
   "A mapping from tempfile names to Emacs buffer names.")
 
-(defun note-temp-file (filename directory buffer)
-  (cond (directory
-         (format nil "~a/~a" directory buffer))
-        (t
-         (setf (gethash filename *temp-file-map*) buffer)
-         filename)))
-
-(defun compile-temp-file (filename dir buffer offset)
+(defun compile-temp-file (temp-file-name buffer-file-name buffer-name offset)
   (if (fboundp 'ccl::function-source-note)
-      (compile-file filename
+      (compile-file temp-file-name
                     :load t
-                    :compile-file-original-truename (note-temp-file filename 
-                                                                    dir
-                                                                    buffer)
+                    :compile-file-original-truename 
+                    (or buffer-file-name
+                        (progn 
+                          (setf (gethash temp-file-name *temp-file-map*)
+                                buffer-name)
+                          temp-file-name))
                     :compile-file-original-buffer-offset (1- offset))
-      (compile-file filename :load t)))
+      (compile-file temp-file-name :load t)))
 
 ;;; Profiling (alanr: lifted from swank-clisp)
 
