@@ -451,9 +451,9 @@
                       (source-cache-get filename (file-write-date filename))
                       (not (load output-file)))))))))
 
-(defimplementation swank-compile-string (string &key buffer position directory
+(defimplementation swank-compile-string (string &key buffer position filename
                                                 policy)
-  (declare (ignore directory policy))
+  (declare (ignore filename policy))
   (with-compilation-hooks ()
     (let ((*buffer-name* buffer)
           (*buffer-start-position* position)
